# chess-lmm-framework

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: mcp-integration.md
src/chess_lmm/: __init__.py  __main__.py  human_player.py  llm_agent.py  mcp_client.py  mcp_interface.py  mock_server.py  orchestrator.py  recording.py  types.py
tests/: conftest.py  test_human_player.py  test_llm_agent.py  test_mcp_client.py  test_mock_server.py  test_orchestrator.py  test_recording.py  test_types.py
