[project]
name = "chess-lmm"
version = "0.1.0"
description = "Chess LMM framework: play chess against Claude via MCP-compatible interface"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "python-chess>=1.999",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chess_lmm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["chess_lmm"]

[tool.ruff]
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]

[tool.coverage.run]
source = ["chess_lmm"]

[tool.coverage.report]
show_missing = true
